[package]
name = "wukong"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
