[package]
name = "wukong"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full", "sync"] }
tower-http = { version = "0.6.4", features = ["cors"] }
ts-rs = "10.1.0"
utoipa = { version = "5.3.1", features = ["chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
